cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)

project(pango-world CXX)

find_package(PkgConfig)
pkg_check_modules(GLIB REQUIRED glib-2.0)
include_directories(${GLIB_INCLUDE_DIRS})
link_directories(${GLIB_LIBRARY_DIRS})
pkg_check_modules(CAIRO REQUIRED cairo)
include_directories(${CAIRO_INCLUDE_DIRS})
link_directories(${CAIRO_LIBRARY_DIRS})
pkg_check_modules(FREETYPE REQUIRED freetype2)
include_directories(${FREETYPE_INCLUDE_DIRS})
link_directories(${FREETYPE_LIBRARY_DIRS})
pkg_check_modules(PANGO REQUIRED pango)
include_directories(${PANGO_INCLUDE_DIRS})
link_directories(${PANGO_LIBRARY_DIRS})
pkg_check_modules(PANGOCAIRO REQUIRED pangocairo)
include_directories(${PANGOCAIRO_INCLUDE_DIRS})
link_directories(${PANGOCAIRO_LIBRARY_DIRS})
pkg_check_modules(PANGOFT REQUIRED pangoft2)
include_directories(${PANGOFT_INCLUDE_DIRS})
link_directories(${PANGOFT_LIBRARY_DIRS})

add_executable(pango-world main.cc)
target_link_libraries(pango-world ${GLIB_LIBRARIES} ${CAIRO_LIBRARIES} ${FREETYPE_LIBRARIES} ${PANGO_LIBRARIES} ${PANGOCAIRO_LIBRARIES} ${PANGOFT_LIBRARIES})
